增加了牛逼操作

--- a/index.html
+++ b/index.html
@@ -1,101 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal website and portfolio">
-    <title>Elemyx - Personal Website</title>
+    <title>精美文本框</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="container">
-                <div class="logo">Elemyx</div>
-                <ul class="nav-links">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <section id="hero" class="hero">
-            <div class="container">
-                <h1>Welcome to My Portfolio</h1>
-                <p class="subtitle">Developer | Creator | Problem Solver</p>
-                <a href="#about" class="cta-button">Learn More</a>
-            </div>
-        </section>
-
-        <section id="about" class="about">
-            <div class="container">
-                <h2>About Me</h2>
-                <p>Hello! I'm a passionate developer focused on creating elegant solutions to complex problems. I enjoy working with modern technologies and constantly learning new skills.</p>
-            </div>
-        </section>
-
-        <section id="skills" class="skills">
-            <div class="container">
-                <h2>Skills</h2>
-                <div class="skills-grid">
-                    <div class="skill-card">
-                        <h3>Frontend Development</h3>
-                        <p>HTML, CSS, JavaScript, React</p>
-                    </div>
-                    <div class="skill-card">
-                        <h3>Backend Development</h3>
-                        <p>Node.js, Python, Databases</p>
-                    </div>
-                    <div class="skill-card">
-                        <h3>Tools & Technologies</h3>
-                        <p>Git, Docker, CI/CD, Cloud Services</p>
-                    </div>
+    <div class="container">
+        <div class="textbox-wrapper">
+            <div class="textbox">
+                <div class="textbox-header">✨ 欢迎来到202 ✨</div>
+                <div class="textbox-content">
+                    <p>刘子航牛逼</p>
+                    <p>杨一泽牛逼</p>
+                    <p>张志成牛逼</p>
+                    <p>李仙保牛逼</p>
+                    <p>王俊富牛逼</p>
+                </div>
+                <div class="textbox-footer">
+                    <button class="btn btn-primary">了解更多</button>
+                    <button class="btn btn-secondary">关闭</button>
                 </div>
             </div>
-        </section>
-
-        <section id="projects" class="projects">
-            <div class="container">
-                <h2>Projects</h2>
-                <div class="projects-grid">
-                    <div class="project-card">
-                        <h3>Project One</h3>
-                        <p>Description of an interesting project you've worked on.</p>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project Two</h3>
-                        <p>Another project showcasing your skills and creativity.</p>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project Three</h3>
-                        <p>A third project demonstrating your expertise.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="contact">
-            <div class="container">
-                <h2>Get In Touch</h2>
-                <p>Interested in working together? Feel free to reach out!</p>
-                <div class="contact-links">
-                    <a href="https://github.com/mayixuanemail-web" target="_blank">GitHub</a>
-                    <a href="mailto:contact@example.com">Email</a>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2026 Elemyx. All rights reserved.</p>
         </div>
-    </footer>
-
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
