🚀 创建超级离奇网站！包含牛逼天团成员和混乱功能

--- a/index.html
+++ b/index.html
@@ -3,28 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>202</title>
+    <title>🌀 超级离奇网站 🌀</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="stars"></div>
     <div class="container">
-        <div class="textbox-wrapper">
-            <div class="textbox">
-                <div class="textbox-header">✨ 欢迎来到202 ✨</div>
-                <div class="textbox-content">
-                    <p>刘子航牛逼</p>
-                    <p>杨一泽牛逼</p>
-                    <p>张志成牛逼</p>
-                    <p>李仙保牛逼</p>
-                    <p>王俊富牛逼</p>
-                </div>
-                <div class="textbox-footer">
-                    <button class="btn btn-primary">了解更多</button>
-                    <button class="btn btn-secondary">关闭</button>
-                </div>
+        <div class="title-chaos">
+            <h1 class="glitch" data-text="🚀 牛逼天团 🚀">🚀 牛逼天团 🚀</h1>
+            <p class="subtitle-wave">世界上最离奇的存在</p>
+        </div>
+
+        <div class="heroes-container">
+            <div class="hero-card hero-1">
+                <div class="hero-number">01</div>
+                <p class="hero-name">刘子航</p>
+                <p class="hero-title">牛逼</p>
+                <div class="floating-emoji">🔥</div>
+            </div>
+
+            <div class="hero-card hero-2">
+                <div class="hero-number">02</div>
+                <p class="hero-name">杨一泽</p>
+                <p class="hero-title">牛逼</p>
+                <div class="floating-emoji">⭐</div>
+            </div>
+
+            <div class="hero-card hero-3">
+                <div class="hero-number">03</div>
+                <p class="hero-name">张志成</p>
+                <p class="hero-title">牛逼</p>
+                <div class="floating-emoji">💫</div>
+            </div>
+
+            <div class="hero-card hero-4">
+                <div class="hero-number">04</div>
+                <p class="hero-name">李仙保</p>
+                <p class="hero-title">牛逼</p>
+                <div class="floating-emoji">🌪️</div>
+            </div>
+
+            <div class="hero-card hero-5">
+                <div class="hero-number">05</div>
+                <p class="hero-name">王俊富</p>
+                <p class="hero-title">牛逼</p>
+                <div class="floating-emoji">💎</div>
             </div>
         </div>
+
+        <div class="chaos-section">
+            <button class="chaos-button" onclick="triggerChaos()">🎉 触发混乱 🎉</button>
+            <p class="chaos-text">点击按钮会发生离奇的事情...</p>
+        </div>
+
+        <div class="rotating-text">
+            💎 这是世界上最离奇的网站 💎 这是世界上最离奇的网站 💎
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
