--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌀 超级离奇网站 🌀</title>
+    <base href="/elemyx.github.io/">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
