--- a/index.html
+++ b/index.html
@@ -3,59 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌀 超级离奇网站 🌀</title>
+    <title>🌀 超级离奇诡异网站 🌀</title>
     <base href="/elemyx.github.io/">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="stars"></div>
+    <div class="glitch-bg"></div>
+    <div class="chaos-overlay"></div>
     <div class="container">
-        <div class="title-chaos">
+        <div class="title-chaos">诡异的存在</p>
+            <p class="weird-text">⚠️ 警告：此网站可能导致精神错乱 ⚠️
             <h1 class="glitch" data-text="🚀 牛逼天团 🚀">🚀 牛逼天团 🚀</h1>
             <p class="subtitle-wave">世界上最离奇的存在</p>
         </div>
 
-        <div class="heroes-container">
-            <div class="hero-card hero-1">
+        <div class="heroes-container"> onmouseover="heroGlitch(this)">
                 <div class="hero-number">01</div>
                 <p class="hero-name">刘子航</p>
                 <p class="hero-title">牛逼</p>
                 <div class="floating-emoji">🔥</div>
+                <div class="hero-aura">
+                <div class="floating-emoji">🔥</div>
             </div>
-
-            <div class="hero-card hero-2">
+ onmouseover="heroGlitch(this)">
                 <div class="hero-number">02</div>
                 <p class="hero-name">杨一泽</p>
                 <p class="hero-title">牛逼</p>
                 <div class="floating-emoji">⭐</div>
-            </div>
-
-            <div class="hero-card hero-3">
+                <div class="hero-aura">
+                <div class="floating-emoji">⭐</div>
+            </div> onmouseover="heroGlitch(this)">
                 <div class="hero-number">03</div>
                 <p class="hero-name">张志成</p>
                 <p class="hero-title">牛逼</p>
                 <div class="floating-emoji">💫</div>
-            </div>
-
-            <div class="hero-card hero-4">
+                <div class="hero-aura">
+                <p class="hero-title">牛逼</p>
+                <div class="floating-emoji">💫</div>
+            </div> onmouseover="heroGlitch(this)">
                 <div class="hero-number">04</div>
                 <p class="hero-name">李仙保</p>
                 <p class="hero-title">牛逼</p>
                 <div class="floating-emoji">🌪️</div>
-            </div>
-
-            <div class="hero-card hero-5">
+                <div class="hero-aura">
+                <p class="hero-title">牛逼</p>
+                <div class="floating-emoji">🌪️</div>
+            </div> onmouseover="heroGlitch(this)">
                 <div class="hero-number">05</div>
                 <p class="hero-name">王俊富</p>
                 <p class="hero-title">牛逼</p>
                 <div class="floating-emoji">💎</div>
+                <div class="hero-aura">
+                <p class="hero-title">牛逼</p>
+                <div class="floating-emoji">💎</div>
             </div>
+        </div>UltraChaos()">🎉 终极混乱 🎉</button>
+            <button class="chaos-button" onclick="brainWash()">🧠 洗脑模式 🧠</button>
+            <button class="chaos-button" onclick="inverseReality()">🌍 反转现实 🌍</button>
+            <p class="chaos-text">选择你的命运...</p>
         </div>
 
-        <div class="chaos-section">
-            <button class="chaos-button" onclick="triggerChaos()">🎉 触发混乱 🎉</button>
-            <p class="chaos-text">点击按钮会发生离奇的事情...</p>
+        <div class="rotating-text">
+            💎 这是世界上最诡异的网站 💎 这是世界上最诡异的网站 💎
         </div>
+
+        <div class="hidden-message">
+            <p>👁️ 你被看着... 👁️</p>
 
         <div class="rotating-text">
             💎 这是世界上最离奇的网站 💎 这是世界上最离奇的网站 💎
