增强视觉效果修改

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <div class="stars"></div>
     <div class="glitch-bg"></div>
     <div class="chaos-overlay"></div>
+    <div class="spotlight"></div>
     <div class="container">
         <div class="title-chaos">
+            <div class="title-glow"></div>
             <h1 class="glitch" data-text="🚀 牛逼天团 🚀">🚀 牛逼天团 🚀</h1>
+            <div class="title-underline"></div>
             <p class="subtitle-wave">世界上最离奇诡异的存在</p>
             <p class="weird-text">⚠️ 警告：此网站可能导致精神错乱 ⚠️</p>
         </div>
@@ -60,7 +63,8 @@
         </div>
 
         <div class="chaos-section">
-            <button class="chaos-button" onclick="triggerUltraChaos()">🎉 终极混乱 🎉</button>
+            <div class="button-glow"></div>
+            <button class="chaos-button primary-btn" onclick="triggerUltraChaos()">🎉 终极混乱 🎉</button>
             <button class="chaos-button" onclick="brainWash()">🧠 洗脑模式 🧠</button>
             <button class="chaos-button" onclick="inverseReality()">🌍 反转现实 🌍</button>
             <p class="chaos-text">选择你的命运...</p>
