--- a/index.html
+++ b/index.html
@@ -23,43 +23,12 @@
         <div class="heroes-container">
             <div class="hero-card hero-1" onmouseover="heroGlitch(this)">
                 <div class="hero-number">01</div>
-                <p class="hero-name">刘子航</p>
+                <p class="hero-name">孔令淼</p>
                 <p class="hero-title">牛逼</p>
                 <div class="floating-emoji">🔥</div>
                 <div class="hero-aura"></div>
             </div>
-
-            <div class="hero-card hero-2" onmouseover="heroGlitch(this)">
-                <div class="hero-number">02</div>
-                <p class="hero-name">杨一泽</p>
-                <p class="hero-title">牛逼</p>
-                <div class="floating-emoji">⭐</div>
-                <div class="hero-aura"></div>
-            </div>
-
-            <div class="hero-card hero-3" onmouseover="heroGlitch(this)">
-                <div class="hero-number">03</div>
-                <p class="hero-name">张志成</p>
-                <p class="hero-title">牛逼</p>
-                <div class="floating-emoji">💫</div>
-                <div class="hero-aura"></div>
-            </div>
-
-            <div class="hero-card hero-4" onmouseover="heroGlitch(this)">
-                <div class="hero-number">04</div>
-                <p class="hero-name">李仙保</p>
-                <p class="hero-title">牛逼</p>
-                <div class="floating-emoji">🌪️</div>
-                <div class="hero-aura"></div>
-            </div>
-
-            <div class="hero-card hero-5" onmouseover="heroGlitch(this)">
-                <div class="hero-number">05</div>
-                <p class="hero-name">王俊富</p>
-                <p class="hero-title">牛逼</p>
-                <div class="floating-emoji">💎</div>
-                <div class="hero-aura"></div>
-            </div>
+            
         </div>
 
         <div class="chaos-section">
